--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav ul li a:hover {
     border: 1px solid #ddd;
     margin: 10px;
     padding: 10px;
-    width: 250%; /* Largura dinâmica para os produtos */
+    width: 30%; /* Largura dinâmica para os produtos */
     max-width: 300px; /* Limite de largura para telas grandes */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -89,7 +89,7 @@ nav ul li a:hover {
 
 .produto img {
     max-width: 100%;
-    height: auto;
+    height: 150px;
     border-radius: 5px;
 }
 
