--- a/style.css
+++ b/style.css
@@ -42,6 +42,17 @@ nav ul li a:hover {
     padding: 100px 20px;
 }
 
+.carousel-item {
+    justify-items: center;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
+    max-width: 1200px;
+    max-height: 400px;
+}
+
 .hero h1 {
     margin: 0;
     font-size: 48px;
