--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav ul li a:hover {
 }
 
 .produto button:hover {
-    background-color: #218838;
+    background-color: #a8ad11;
 }
 
 /* Barra de Pesquisa */
