--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Barra de Navegação */
 nav {
-    background-color: #333;
+    background-color: #0b0101;
     color: white;
     padding: 10px;
     text-align: center;
