--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav ul li a:hover {
 
 .hero .btn {
     background-color: white;
-    color: #4CAF50;
+    color: #edd118;
     padding: 10px 20px;
     text-decoration: none;
     font-size: 18px;
