--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav ul li a:hover {
 
 /* Tela Inicial */
 .hero {
-    background-color: #edd118;
+    background-color: #0d0c0d;
     color: white;
     text-align: center;
     padding: 100px 20px;
