--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    background-image: url("https://wallpaper4k.top/wp-content/uploads/2023/09/hd-soccer-stadium-wallpaper-9844.jpg");
+    background-image: cover;
 
 }
 
