--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@ nav ul li a:hover {
 
 /* Tela Inicial */
 .hero {
-    background-color: #0b0101;
-    color: white;
+   /* background-color: #0b0101;*/
+    background-image: url("https://wallpapers.com/images/hd/best-football-background-vkr4qy2utkrsn5rj.jpg");
+    background-image: cover;
     text-align: center;
     padding: 100px 20px;
 }
