--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav ul li a:hover {
 /* Tela Inicial */
 .hero {
    /* background-color: #0b0101;*/
-    background-image: url("https://wallpapers.com/images/hd/best-football-background-vkr4qy2utkrsn5rj.jpg");
+    background-image: url("https://www.moneyaisle.com/wp-content/uploads/2024/08/2-2.png");
     background-image: cover;
     text-align: center;
     padding: 100px 20px;
